--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - './supervisor:/etc/supervisor/conf.d'
       - '.:/var/www/html'
+      - appdata:/var/www/html
     networks: 
       - appnet
   db:
@@ -37,4 +38,6 @@ volumes:
   dbdata:
     driver: local
   cachedata:
+    driver: local
+  appdata:
     driver: local
