--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
-version: '2'
+version: '3'
 services:
   application:
+    container_name: app
+    restart: unless-stopped
+    tty: true
     image: 'fwartner/php-7.3'
     ports:
       - '8011:80'
@@ -13,18 +16,24 @@ services:
       - db
   db:
     image: mysql
+    container_name: db
+    restart: unless-stopped
+    tty: true
     networks: 
       - appnet
     ports:
       - '33061:3306'
     environment:
-      - MYSQL_ROOT_PASSWORD=changeme123
-      - MYSQL_DATABASE=app_db
-      - MYSQL_USER=app_db_user
-      - MYSQL_PASSWORD=changeme123
+      MYSQL_ROOT_PASSWORD=changeme123
+      MYSQL_DATABASE=app_db
+      MYSQL_USER=app_db_user
+      MYSQL_PASSWORD=changeme123
     volumes:
       - dbdata:/var/lib/mysql
   redis:
+    container_name: redis
+    restart: unless-stopped
+    tty: true
     image: 'redis:latest'
     networks: 
       - appnet
